--- a/arquivado/000/000.ipynb
+++ b/arquivado/000/000.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5UpXOxULGDZUAslQWiXWr"
+      "authorship_tag": "ABX9TyNip3d2hOnLENuzO/oy4pip"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,8 +18,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Caio S. P.\n",
-        "`(placeholder)`"
+        "> # Caio S. P.\n",
+        ">>  (placeholder)"
       ],
       "metadata": {
         "id": "VGQmg3ih0rpf"
